Bug 510703 - Automatic shutdown after updates feature crashes Discover ("arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d")
Summary: Automatic shutdown after updates feature crashes Discover ("arguments to %s()...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 6.5.80
Platform: KDE Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-17 01:38 UTC by Nate Graham
Modified: 2025-10-22 03:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-10-17 01:38:05 UTC
SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-10-16
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics


STEPS TO REPRODUCE
1. Install available updates
2. While the updates are installing turn on the "after updating: shut down" feature
3. Wait for updates to complete


OBSERVED RESULT
Instead of shutting down the system, Discover crashes. This is 100% reproducible for me with today's git master as well as yesterday's. This is a recent regression. Backtrace:

Thread 1 (Thread 0x7f4470a0a080 (LWP 14080)):
[KCrash Handler]
#4  __pthread_kill_implementation (threadid=<optimized out>, signo=6, no_tid=<optimized out>) at pthread_kill.c:44
#5  0x00007f44774a0410 in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#6  0x00007f447748757a in __GI_abort () at abort.c:77
#7  0x00007f44762f4064 in _dbus_abort () at ../dbus/dbus/dbus-sysdeps.c:103
#8  0x00007f447631de50 in _dbus_warn_check_failed (format=0x7f447632a1b0 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at ../dbus/dbus/dbus-internals.c:329
#9  0x00007f4477facdc5 in q_dbus_message_iter_init_append (message=0x0, iter=0x7ffd98d9ade0) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbus_symbols_p.h:339
#10 QDBusMessagePrivate::toDBusMessage(QDBusMessage const&, QFlags<QDBusConnection::ConnectionCapability>, QDBusError*) [clone .isra.0] (capabilities=..., error=0x7ffd98d9b0c0, message=...) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusmessage.cpp:177
#11 0x00007f4477f9222e in QDBusConnectionPrivate::sendWithReplyAsync (this=0x7f44680016e0, message=..., receiver=<optimized out>, returnMethod=<optimized out>, errorMethod=<optimized out>, timeout=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/global/qflags.h:77
#12 0x00007f4477f71404 in QDBusConnection::asyncCall (this=<optimized out>, message=..., timeout=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/dbus/qdbusconnection.cpp:445
#13 0x000056236fe4ddb4 in ?? ()
#14 0x000056236fe598f7 in ?? ()
#15 0x00007f4478d6ba03 in QQmlObjectOrGadget::metacall (this=<optimized out>, type=<optimized out>, index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlobjectorgadget.cpp:14
#16 0x00007f4478c1b433 in QV4::CallMethod (object=..., index=20, returnType=..., argCount=0, argTypes=0x0, engine=0x562386aa5660, callArgs=<optimized out>, callType=QMetaObject::InvokeMetaMethod) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:1727
#17 QV4::QObjectMethod::callPrecise (object=..., data=..., engine=<optimized out>, callArgs=<optimized out>, callType=QMetaObject::InvokeMetaMethod) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:2087
#18 0x00007f4478c260dd in operator() (__closure=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:3113
#19 operator()<QV4::QObjectMethod::callInternal(const QV4::Value*, const QV4::Value*, int) const::<lambda()> > (__closure=<synthetic pointer>, call=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:3090
#20 QV4::QObjectMethod::callInternal (this=0x7ffd98d9ba50, thisObject=<optimized out>, argv=0x7f442bd87538, argc=0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:3113
#21 0x00007f4478c80dce in QV4::Moth::VME::interpret (frame=0x3700, frame@entry=0x7ffd98d9bea0, engine=0x562386aa5660, code=0x7f442bd87580 "`\356\213+D\177") at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:803
#22 0x00007f4478c84bf3 in QV4::Moth::VME::exec (frame=<optimized out>, engine=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:492
#23 0x00007f4478bcb3a0 in QV4::doCall (self=<optimized out>, thisObject=<optimized out>, argv=<optimized out>, argc=<optimized out>, context=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/jsruntime/qv4function.cpp:52
#24 0x00007f4478d28ad4 in QQmlJavaScriptExpression::evaluate (this=<optimized out>, callData=callData@entry=0x7f442bd87508, isUndefined=0x0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:238
#25 0x00007f4478d28d93 in QQmlJavaScriptExpression::evaluate (this=<optimized out>, isUndefined=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmljavascriptexpression.cpp:155
#26 0x00007f4478cfeef3 in QQmlExpressionPrivate::v4value (this=0x56238738c760, isUndefined=0x0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlexpression.cpp:232
#27 QQmlExpressionPrivate::value (this=0x56238738c760, isUndefined=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlexpression.cpp:252
#28 QQmlExpression::evaluate (this=this@entry=0x7ffd98d9c130, valueIsUndefined=valueIsUndefined@entry=0x0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlexpression.cpp:274
#29 0x00007f44795e8af0 in QQuickStateChangeScript::execute (this=0x56238752c8b0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/quick/util/qquickstatechangescript.cpp:92
#30 0x00007f44796099f3 in QQuickTransitionManager::transition (this=<optimized out>, list=..., transition=0x0, defaultTarget=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/quick/util/qquicktransitionmanager.cpp:204
#31 0x00007f44795e798c in QQuickState::apply (this=<optimized out>, trans=0x0, revert=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/quick/util/qquickstate.cpp:647
#32 0x00007f44795f1a8b in QQuickStateGroupPrivate::setCurrentStateInternal (this=0x562387881c60, state=..., ignoreTrans=<optimized out>) at /usr/src/debug/qt6-declarative/qtdeclarative/src/quick/util/qquickstategroup.cpp:512
#33 0x00007f4478c9f835 in QQmlPropertyData::writeProperty (this=<optimized out>, target=<optimized out>, value=<optimized out>, flags=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlpropertydata_p.h:364
#34 0x00007f4478cbdd80 in GenericBinding<10>::doStore<QString> (this=0x562387888f10, value=..., pd=<optimized out>, flags=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:284
#35 GenericBinding<10>::write (this=0x562387888f10, result=..., isUndefined=<optimized out>, flags=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:265
#36 0x00007f4478cba1e5 in QQmlBinding::doUpdate (this=0x562387888f10, watcher=..., flags=..., scope=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:715
#37 0x00007f4478cb8fcd in QQmlBinding::update (this=0x562387888f10, flags=...) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlbinding.cpp:165
#38 0x00007f4478d52398 in QQmlNotifier::emitNotify (endpoint=<optimized out>, a=0x0) at /usr/src/debug/qt6-declarative/qtdeclarative/src/qml/qml/qqmlnotifier.cpp:74
#39 0x00007f4477adfde2 in doActivate<false> (sender=0x562387939300, signal_index=36, argv=0x0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4145
#40 0x00007f4477ae016f in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=<optimized out>, a=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:461
#41 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4255
#42 0x00007f4477ae016f in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=<optimized out>, a=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:461
#43 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4255
#44 0x00007f4477acc411 in QMetaObject::activate<void, QObject*> (sender=0x5623876e7de0, mo=<optimized out>, local_signal_index=0, ret=0x0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs.h:319
#45 QObject::destroyed (this=0x5623876e7de0, _t1=0x5623876e7de0) at /usr/src/debug/qt6-base/build/src/corelib/kernel/moc_qobject.cpp:186
#46 QObject::~QObject (this=<optimized out>, this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:1022
#47 0x00007f447a17aef6 in ResultsStream::~ResultsStream() () from /usr/lib/plasma-discover/libDiscoverCommon.so
#48 0x00007f4477acd45c in QObject::event (this=<optimized out>, e=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:1396
#49 0x00007f4479a510a0 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5623876e7de0, e=0x562387599080) at /usr/src/debug/qt6-base/qtbase/src/widgets/kernel/qapplication.cpp:3307
#50 0x00007f4477a736c8 in QCoreApplication::notifyInternal2 (receiver=0x5623876e7de0, event=event@entry=0x562387599080) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109
#51 0x00007f4477a73ab2 in QCoreApplication::sendEvent (receiver=<optimized out>, event=0x562387599080) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1549
#52 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5623865121e0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1904
#53 0x00007f4477d56b18 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1757
#54 postEventSourceDispatch (s=0x56238651bce0) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#55 0x00007f44766baf4d in g_main_dispatch (context=0x7f4468000f60) at ../glib/glib/gmain.c:3565
#56 0x00007f44766bc617 in g_main_context_dispatch_unlocked (context=0x7f4468000f60) at ../glib/glib/gmain.c:4425
#57 g_main_context_iterate_unlocked (context=context@entry=0x7f4468000f60, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4490
#58 0x00007f44766bc825 in g_main_context_iteration (context=0x7f4468000f60, may_block=1) at ../glib/glib/gmain.c:4556
#59 0x00007f4477d539d2 in QEventDispatcherGlib::processEvents (this=0x56238651b490, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#60 0x00007f4477a7ea86 in QEventLoop::processEvents (this=0x7ffd98d9eb10, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:104
#61 QEventLoop::exec (this=0x7ffd98d9eb10, flags=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qeventloop.cpp:186
#62 0x00007f4477a78171 in QCoreApplication::exec () at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1452
#63 0x000056236fe43638 in ?? ()
#64 0x00007f4477489675 in __libc_start_call_main (main=main@entry=0x56236fe416c0, argc=argc@entry=3, argv=argv@entry=0x7ffd98d9f078) at ../sysdeps/nptl/libc_start_call_main.h:58
#65 0x00007f4477489729 in __libc_start_main_impl (main=0x56236fe416c0, argc=3, argv=0x7ffd98d9f078, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd98d9f068) at ../csu/libc-start.c:360
#66 0x000056236fe44125 in ?? ()
Comment 2 Aleix Pol 2025-10-18 01:58:58 UTC
#8  0x00007f447631de50 in _dbus_warn_check_failed (format=0x7f447632a1b0 "arguments to %s() were incorrect, assertion \"%s\" failed in file %s line %d.\nThis is normally a bug in some application using the D-Bus library.\n") at ../dbus/dbus/dbus-internals.c:329

Is the issue
Comment 3 Bug Janitor Service 2025-10-18 01:59:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1189
Comment 4 Aleix Pol 2025-10-20 13:48:48 UTC
Git commit 10241b164436fefe9dfa2a6448e9e76f824bc011 by Aleix Pol.
Committed on 20/10/2025 at 13:45.
Pushed by apol into branch 'master'.

Fix crash

Don't create and destroy the method.

M  +4    -4    discover/DiscoverObject.cpp

https://invent.kde.org/plasma/discover/-/commit/10241b164436fefe9dfa2a6448e9e76f824bc011
Comment 5 Aleix Pol 2025-10-22 03:05:10 UTC
Git commit b0a3ff81f76ee9ae403290960e45f034a0b7a16a by Aleix Pol.
Committed on 20/10/2025 at 13:49.
Pushed by apol into branch 'Plasma/6.5'.

Fix crash

Don't create and destroy the method.

M  +4    -4    discover/DiscoverObject.cpp

https://invent.kde.org/plasma/discover/-/commit/b0a3ff81f76ee9ae403290960e45f034a0b7a16a