Fix crash

Don't create and destroy the method.

BUG: 510703